move to gradle