@@ -1,2 +1,2 @@
 #!/bin/bash
-java --add-opens java.base/jdk.internal.misc=ALL-UNNAMED -jar Shiruka.jar --locale=en_US
+java -jar Shiruka.jar
